--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,12 @@ env:
 
 on:
   pull_request:
-    branches: ['master', 'main']
-    paths-ignore: ['docs/**']
+    branches: ["master", "main"]
+    paths-ignore: ["docs/**"]
 
   push:
-    branches: ['master', 'main']
-    paths-ignore: ['docs/**']
+    branches: ["master", "main"]
+    paths-ignore: ["docs/**"]
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
@@ -28,7 +28,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       # Consider using pre-commit.ci for open source project
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.0
@@ -42,13 +42,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build the Stack
-        run: docker-compose -f local.yml build
+        run: docker-compose up build
 
       - name: Run DB Migrations
-        run: docker-compose -f local.yml run --rm django python manage.py migrate
+        run: docker-compose up run --rm django python manage.py migrate
 
       - name: Run Django Tests
-        run: docker-compose -f local.yml run django pytest
+        run: docker-compose up run --rm django pytest
 
       - name: Tear down the Stack
-        run: docker-compose -f local.yml down
+        run: docker-compose down
