--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,13 +42,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build the Stack
-        run: docker-compose up build
+        run: docker-compose build
 
       - name: Run DB Migrations
-        run: docker-compose up run --rm django python manage.py migrate
+        run: docker-compose run --rm django python manage.py migrate
 
       - name: Run Django Tests
-        run: docker-compose up run --rm django pytest
+        run: docker-compose run --rm django pytest
 
       - name: Tear down the Stack
-        run: docker-compose down
+        run: docker-compose -f local.yml down
