updated tear down stack step in workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,4 +51,4 @@ jobs:
         run: docker-compose run --rm django pytest
 
       - name: Tear down the Stack
-        run: docker-compose -f local.yml down
+        run: docker-compose down
